Update and rename courses.html to programmes.html

--- a/programmes.html
+++ b/programmes.html
@@ -39,7 +39,7 @@
 	    <img src="images/programme_banner.png" alt="huni_banner" class="home_img_banner">
 
 <div class="super_container">
-	
+
 	<!-- Home -->
 		<div class="home"></div>
 
@@ -145,7 +145,7 @@
 							<div class="col">
 								<div class="pagination_container d-flex flex-row align-items-center justify-content-start">
 									<ul class="pagination_list">
-										<li class="active"><a href="courses.html">1</a></li>
+										<li class="active"><a href="programmes.html">1</a></li>
 										<li><a href="courses2.html">2</a></li>
 										<li><a href="courses3.html">3</a></li>
                     <li><a href="courses4.html">4</a></li>
@@ -169,7 +169,7 @@
 							<div class="sidebar_section_title">Programmes</div>
 							<div class="sidebar_categories">
 								<ul>
-									<li><a href="courses.html">Economics and Management</a></li>
+									<li><a href="programmes.html">Economics and Management</a></li>
 									<li><a href="courses2.html">Education</a></li>
 									<li><a href="courses3.html">Engineering</a></li>
 									<li><a href="courses4.html">Information and Computer Technology</a></li>
@@ -186,7 +186,7 @@
 															<ul class="tags_list">
 																<li><a href="courses3.html">Engineering</a></li>
 																<li><a href="https://www.um.edu.my/">UM</a></li>
-																<li><a href="courses.html">Economics</a></li>
+																<li><a href="programmes.html">Economics</a></li>
 																<li><a href="courses4.html">Technology</a></li>
 																<li><a href="http://www.ukm.my/portal/">UKM</a></li>
 																<li><a href="https://www.uitm.edu.my/index.php/en/">UiTM</a></li>
