--- a/courses4.html
+++ b/courses4.html
@@ -150,7 +150,7 @@
 								<div class="pagination_container d-flex flex-row align-items-center justify-content-start">
 									<ul class="pagination_list">
 										<li><a href="courses3.html"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
-										<li><a href="courses.html">1</a></li>
+										<li><a href="programmes.html">1</a></li>
 										<li><a href="courses2.html">2</a></li>
 										<li><a href="courses3.html">3</a></li>
                     <li class="active"><a href="courses4.html">4</a></li>
@@ -175,7 +175,7 @@
 							<div class="sidebar_section_title">Programmes</div>
 							<div class="sidebar_categories">
 								<ul>
-                  <li><a href="courses.html">Economics and Management</a></li>
+                  <li><a href="programmes.html">Economics and Management</a></li>
 									<li><a href="courses2.html">Education</a></li>
 									<li><a href="courses3.html">Engineering</a></li>
 									<li><a href="courses4.html">Information and Computer Technology</a></li>
@@ -192,7 +192,7 @@
 															<ul class="tags_list">
                                 <li><a href="courses3.html">Engineering</a></li>
 																<li><a href="https://www.um.edu.my/">UM</a></li>
-																<li><a href="courses.html">Economics</a></li>
+																<li><a href="programmes.html">Economics</a></li>
 																<li><a href="courses4.html">Technology</a></li>
 																<li><a href="http://www.ukm.my/portal/">UKM</a></li>
 																<li><a href="https://www.uitm.edu.my/index.php/en/">UiTM</a></li>
